@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-19T02:04:23Z",
-  "count_outdated" : 2248,
-  "uniques_outdated" : 488,
-  "count" : 2303,
+  "timestamp" : "2022-07-19T16:28:40Z",
+  "count_outdated" : 2250,
+  "uniques_outdated" : 489,
+  "count" : 2304,
   "uniques" : 518,
   "clones" : [
-    {
-      "timestamp": "2022-07-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 9,
