@@ -1,12 +1,7 @@
 {
-  "count": 55,
+  "count": 54,
   "uniques": 16,
   "clones": [
-    {
-      "timestamp": "2022-07-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 9,
