@@ -1,3 +1,10 @@
+2022-07-19T16:28:40Z:
+* notice: last 14d: unq all: 16 54
+* notice: prev accum: outdated-unq outdated-all / unq all: 488 2248 / 518 2303
+* notice: next accum: outdated-unq outdated-all / unq all: 489 2250 / 518 2304
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-07-05] / []
+
 2022-07-19T02:04:23Z:
 * notice: last 14d: unq all: 16 55
 * notice: prev accum: outdated-unq outdated-all / unq all: 487 2245 / 518 2302
